bin_PROGRAMS = pBurst
pBurst_SOURCES = pburst.cpp \
                 Command.cpp \
                 LineBuffer.cpp \
                 Log.cpp \
                 Network.cpp \
                 Options.cpp \
                 Server.cpp \
                 StringToken.cpp \
                 match.cpp \
                 msgEB.cpp \
                 msgPING.cpp \
                 msgSERVER.cpp \
                 msgVERSION.cpp \
                 pburst_string.cpp \
                 signal.cpp \
                 stdinACTION.cpp \
                 stdinECHO.cpp \
                 stdinHELP.cpp \
                 stdinQUIT.cpp \
                 stdinLOAD.cpp \
                 stdinSAY.cpp \
                 stdinWALLOPS.cpp \
                 stdinWHOIS.cpp

pBurst_LDFLAGS=-lm -export-dynamic
